<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pet_sight"
    tools:context=".Share_lost">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="123dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="Welcome"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="149dp"
        android:layout_height="119dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/choose_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_crop" />

    <Button
        android:id="@+id/choose_image"
        android:layout_width="180dp"
        android:layout_height="37dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/hover1"
        android:text="@string/choose_image"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="193dp"
        android:layout_height="37dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="Share image pet lost"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="296dp"
        android:layout_height="253dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/layout_share"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/pet_name"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:ems="10"
            android:hint="@string/name_pet"
            android:inputType="textPersonName"
            android:textColorHint="@color/input_login" />

        <EditText
            android:id="@+id/pet_phone"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:ems="10"
            android:hint="@string/tel"
            android:inputType="textPersonName"
            android:textColorHint="@color/input_login" />

        <EditText
            android:id="@+id/pet_email"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:ems="10"
            android:hint="@string/email_pet"
            android:inputType="textPersonName"
            android:textColorHint="@color/input_login" />

        <!--<EditText-->
            <!--android:id="@+id/pet_Category"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="50dp"-->
            <!--android:layout_marginLeft="45dp"-->
            <!--android:layout_marginRight="45dp"-->
            <!--android:ems="10"-->
            <!--android:hint="Category"-->
            <!--android:inputType="textPersonName"-->
            <!--android:textColorHint="@color/input_login" />-->

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioDog"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="45dp"
                android:layout_weight="1"
                android:text="Dog" />

            <RadioButton
                android:id="@+id/radioCat"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="Cat" />
        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/upload"
        android:layout_width="160dp"
        android:layout_height="38dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/hover1"
        android:text="Upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>